Исправления после ревью